glx/testdata/invalid/broken-references/assertions/assertion-marriage.glx
assertions:
  assertion-marriage-date:
    subject:
      relationship: rel-marriage-john-mary
    property: started_on
    value: "1875-05-10"
    citations:
      - citation-marriage
    confidence: high
    sources:
      - source-parish-leeds
    notes: "Marriage date from parish register"
